--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,8 @@
         		<li><a href="/cv">CV</a></li>
     		</ul>
 		</nav>
+		{{ site.time }}
+		
 		<div class="container">
     
     {{ content }}
