--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
         		<li><a href="/cv">CV</a></li>
     		</ul>
 		</nav>
-		{{ site.time }}
+		{{ page.date | date: '%B %d, %Y' }}
 		
 		<div class="container">
     
