--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
         		<li><a href="/cv">CV</a></li>
     		</ul>
 		</nav>
-		{{ page.date | date: '%B %d, %Y' }}
+ 		<p style="text-align:right"> Last updated: Oct 9, 2020 </p>
 		
 		<div class="container">
     
