--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
         		<li><a href="/cv">CV</a></li>
     		</ul>
 		</nav>
- 		<p style="text-align:right"> Last updated: Oct 9, 2020 </p>
+ 		<p style="text-align:right;font-family:'Courier New';font-size: 12px"> Last updated: Oct 9, 2020 </p>
 		
 		<div class="container">
     
