--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
+			<li><a href="/">Research</a></li>
         		<li><a href="/cv">CV</a></li>
     		</ul>
 		</nav>
