--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,6 +13,7 @@
         		<li><a href="/cv">CV</a></li>
     		</ul>
 		</nav>
+		<p style="text-align:right;font-family:'Courier New';font-size: 15px"> Last updated: Oct 9, 2020 </p>
 		
 		<div class="container">
     
