--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
     
 		</div><!-- /.container -->
 		<footer>
-		<p style="text-align:right;font-family:'Courier New';font-size: 15px"> Last updated: Oct 9, 2020 </p>
+		<p style="text-align:right;font-family:'Courier New';font-size: 15px"> Last updated: Jun, 2021 </p>
 		</footer>
 	</body>
 </html>
