--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
         		<li><a href="/">Home</a></li>
 			<li><a href="/research">Research</a></li>
         		<li><a href="/cv">CV</a></li>
+			<li><a href="/events">Events</a></li>
     		</ul>
 		</nav>
 		
