--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 		
 		<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-		<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+		<script id="MathJax-script" async src="https://hhzou.github.io/mathjax/tex-chtml.js"></script>
 	</head>
 	<body>
 		<nav>
