--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<title>{{ page.title }}</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-		
-		<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-		<script id="MathJax-script" async src="https://hhzou.github.io/mathjax/tex-chtml.js"></script>
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-			<li><a href="/research">Research</a></li>
-        		<li><a href="/cv">CV</a></li>
-			<li><a href="/events">Events</a></li>
-    		</ul>
-		</nav>
-		
-		<div class="container">
-    
-    {{ content }}
-    
-		</div><!-- /.container -->
-		<footer>
-		<p style="text-align:right;font-family:'Courier New';font-size: 15px"> Last updated: Jan, 2022 </p>
-		</footer>
-	</body>
+<html lang="en-us">
+
+  {% include head.html %}
+
+  <body>
+
+    {% include sidebar.html %}
+
+    <!-- Wrap is the content to shift when toggling the sidebar. We wrap the
+         content to avoid any CSS collisions with our real content. -->
+    <div class="wrap">
+      <div class="masthead">
+        <div class="container">
+          <h3 class="masthead-title">
+            <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
+            <small>{{ site.tagline }}</small>
+          </h3>
+        </div>
+      </div>
+
+      <div class="container content">
+        {{ content }}
+      </div>
+    </div>
+
+    <label for="sidebar-checkbox" class="sidebar-toggle"></label>
+
+    <script src='{{ site.baseurl }}/public/js/script.js'></script>
+  </body>
 </html>
