--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,15 @@
         </div>
       </div>
 
+      <nav>
+        <ul>
+            <li><a href="/">Home</a></li>
+      <li><a href="/research">Research</a></li>
+            <li><a href="/cv">CV</a></li>
+      <li><a href="/events">Events</a></li>
+        </ul>
+    </nav>
+
       <div class="container content">
         {{ content }}
       </div>
