--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -25,9 +25,13 @@
       {% endif %}
     {% endfor %}
 
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
+    <a class="sidebar-nav-item" href="{{ site.github.repo }}/research">Research</a>
+    <a class="sidebar-nav-item" href="{{ site.github.repo }}/cv">Research</a>
+    <a class="sidebar-nav-item" href="{{ site.github.repo }}/events">Events</a>
+    
+    <!--
     <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
+  -->
   </nav>
 
   <div class="sidebar-item">
