--- a/css/main.css
+++ b/css/main.css
@@ -41,3 +41,20 @@ ul.posts {
 ul.posts li {
     list-style: none;
 }
+
+/*****************************************************************************/
+/*
+/* Site
+/*
+/*****************************************************************************/
+
+.site {
+  font-size: 100%;
+  text-align: justify;
+  width: 42em;
+  margin: 3em auto 2em auto;
+  line-height: 1.5em;
+}
+
+
+
