--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,7 +26,7 @@
     {% endfor %}
 
     <a class="sidebar-nav-item" href="{{ site.github.repo }}/research">Research</a>
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}/cv">Research</a>
+    <a class="sidebar-nav-item" href="{{ site.github.repo }}/cv">CV</a>
     <a class="sidebar-nav-item" href="{{ site.github.repo }}/events">Events</a>
     
     <!--
