--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,9 +6,9 @@
 
   <title>
     {% if page.title == "Home" %}
-      {{ site.title }} &middot; {{ site.tagline }}
+      {{ site.title }} &middot; HAO ZOU
     {% else %}
-      {{ page.title }} &middot; {{ site.title }}
+      {{ page.title }} &middot; HAO ZOU
     {% endif %}
   </title>
 
