--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,8 +20,8 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700%7CPT+Sans:400">
 
 
-  <link rel="apple-touch-icon" sizes="144x144" href="{{ '/public/apple-touch-icon.png' | absolute_url }}">
-  <link rel="shortcut icon" href="{{ '/public/favicon.ico' | absolute_url }}">
+  <link rel="apple-touch-icon" sizes="144x144" href="{{ '/public/apple-touch-icon.png'}}" type="image">
+  <link rel="shortcut icon" href="{{ '/public/favicon.ico' }}" type="image/x-icon">
 
 
   {% if site.google_analytics_id %}
