--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
       <div class="masthead">
         <div class="container">
           <h3 class="masthead-title">
-            <a href="{{ site.baseurl }}/" title="Home"> HAO ZOU</a> &middot; {{ page.title }}
+            <a href="{{ site.baseurl }}/" title="Home"> HAO ZOU</a> | {{ page.title }}
             <small>{{ site.tagline }}</small>
           </h3>
         </div>
